# ynabpy

./: .gitignore  LICENSE.md  README.md  pyproject.toml
src/ynab/: __init__.py  ynab.py
tests/: budgets.json  fake_backend.py  test.py
