[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ynabpy"
version = "0.0.1"
authors = [
    {name="PreciousFood", email="preciousfood84@gmail.com"}
]
description = "A python library to access teh YNAB api"
readme = "README.md"
requires-python = ">=3.11.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

