[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ynabpy"
dynamic = ["version"]

authors = [
    {name="PreciousFood", email="preciousfood84@gmail.com"}
]
description = "A python library to access teh YNAB api"
readme = "README.md"
requires-python = ">=3.11.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pydantic>=2.9.2",
    "requests>=2.32.3"
]

[project.optional-dependencies]
testing = ["fastapi[standard", "pytest"]

[project.urls]
Home = "https://github.com/PreciousFood/ynabpy"
"YNAB API docs" = "https://api.ynab.com"

[tool.setuptools.dynamic]
version = {attr = "ynab.__version__"}